--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ main.lot
 main.log
 main.lof
 main.ist
+mainmatter/.DS_Store
+mainmatter/.DS_Store
+mainmatter/3-Methodology/.DS_Store
+mainmatter/.DS_Store
