--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ mainmatter/.DS_Store
 mainmatter/.DS_Store
 mainmatter/3-Methodology/.DS_Store
 mainmatter/.DS_Store
+Archive.zip
+main.bcf
+main.run.xml
