--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ mainmatter/.DS_Store
 Archive.zip
 main.bcf
 main.run.xml
+dataset/Data_Score.numbers.sb-a362781f-c2rrwF
+dataset/Data_Score.numbers.sb-a362781f-DhbuRS
+dataset/Data_Score.numbers.sb-a362781f-M5Br5b
+dataset/Data_Score.numbers.sb-a362781f-SosUS3
+dataset/Data_Score.numbers.sb-a362781f-P7cIWZ
+dataset/Data_Score.numbers.sb-a362781f-XDPw6f
+frontmatter/.DS_Store
